[package]
name = "superdev_project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
solana-sdk = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.0"
bs58 = "0.5"
base64 = "0.22"
shuttle-runtime = "0.55.0"
